# ScoringHero

./: .gitignore  .json  CITATION.cff  CLAUDE.md  ClaudePlan.md  ClaudePlan.txt  FUNDING.yml  README.md  SUMO_IMPLEMENTATION_SUMMARY.md  SUMO_MODEL_DOWNLOAD.md  SUMO_REVERT_NOTES.md  SUMO_SETUP.md  autoscoringhero.py  build-win-all.bat  build-win-gssc-dev.bat  build-win-gssc.bat  build-win-py13.bat  build-win.bat  build_json.py  config.json  detect_kc.m  detect_spindle.m  draw_hypnogram.py  icon.icns  json_read.m  mnefile.py  plan.md  pyinstaller.txt  pyinstaller_script.py  pyproject.toml  read_json.m  release-mac.sh  requirements-mac.txt  requirements.txt  scoringhero.py  scoringhero.spec  seed_settings.json  setup_sumo.py  show_colormps.py  test.txt  (+8 more)
.claude/: settings.local.json
annotations/: associated_epoch.py  draw_box.py  draw_box_in_epoch.py  drop_event.py  merge_borders.py  remove_epoch_from_merged_area.py
cache/: load_cache.py  ui_to_cache.py  write_cache.py
config/: apply_changes.py  check_for_compatability.py  default_config.py  load_configuration.py  open_config_window.py  write_configuration.py
data_handling/: __init__.py  cache.py  default_config.py  default_scoring.py  load_cache.py  load_config.py  load_eeg.py  load_scoring.py  write_config.py  write_scoring.py  write_to_cache.py
eeg/: eeg_import_window.py  load_edf.py  load_edf_volt.py  load_eeglab.py  load_r09.py  load_wrapper.py  number_of_epochs.py  rebuild_display.py
events/: add_events_to_container.py  associated_epoch.py  clip_borders.py  draw_box.py  draw_box_in_epoch.py  drop_event.py  (+9 more)
(+194 files in other folders)
