[project]
name = "scoringhero"
version = "0.2.0"
description = "Open-source GUI application for sleep EEG scoring and visualization"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8.1",
    "numpy>=2.2.0",
    "scipy>=1.14.1",
    "edfio>=0.4.0",
    "h5py>=3.12.1,<3.16.0",
    "pyqtgraph>=0.13.7",
    "PyWavelets>=1.8.0",
    "decorator>=5.1.1",
    "tqdm>=4.67.1",
    "requests>=2.32.3",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
build-win = ["nuitka[onefile]>=4.0.5"]
build-mac = ["nuitka[onefile]>=4.0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
